--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -106,6 +106,7 @@ const isArticlePage = pathname.includes('/articles/');
         <a href="/projects" id="nav-projects">專案</a>
         <a href="/#feed" id="nav-feed">動態情報</a>
         <a href="/about" id="nav-about">關於</a>
+        <a href="/search" id="nav-search">搜尋</a>
         <a href="/#contact" class="nav-cta">聯絡我</a>
       </div>
 
